testsuite/bsc.typechecker/typeclasses/ATFUnifyError.bs
package ATFUnifyError where

-- Test that unifying a type function application (Elem a) with a concrete
-- type (Bool) requires the corresponding class context (Container a Bool).
-- Here it is missing, so typecheck reports it (T0030).  The unification is
-- forced by giving 'id' the explicit type 'a -> Elem a -> Bool'.
-- (See ATFFieldUnifyError for the same check via struct field access.)

class Container f e | f -> e where
  type Elem f = e
  wrap   :: e -> f
  unwrap :: f -> e

data Box a = Box a

instance Container (Box a) a where
  wrap = Box
  unwrap (Box x) = x

-- Unification creates an unsatisfied context Container a Bool
conv :: a -> Elem a -> Bool
conv _ = id
